#2365 Fix i18n key voor overflowMenu en dso-icon ipv svg

--- a/packages/core/src/components/header/header.scss
+++ b/packages/core/src/components/header/header.scss
@@ -125,15 +125,15 @@ dso-dropdown-menu {
     align-items: center;
     position: relative;
 
-    svg {
+    dso-icon {
       inline-size: units.$u3;
       block-size: units.$u3;
-
       margin-inline-start: units.$u1;
+      padding-block-start: units.$u1 * 0.25;
     }
 
     &[aria-expanded="true"] {
-      svg {
+      dso-icon {
         transform: rotate(180deg);
       }
     }
